@@ -61,13 +61,13 @@
    <build>
     <pluginManagement>
       <plugins>
-<!--        <plugin>-->
-<!--          <artifactId>maven-compiler-plugin</artifactId>-->
-<!--          <configuration>-->
-<!--            <release>14</release>-->
-<!--            <compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
-<!--          </configuration>-->
-<!--        </plugin>-->
+        <plugin>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <configuration>
+            <release>14</release>
+            <compilerArgs>--enable-preview</compilerArgs>
+          </configuration>
+        </plugin>
 
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
